--- a/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
+++ b/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
@@ -5,10 +5,18 @@ html {
 }
 
 .container {
+  resize:both;
+  overflow:auto;
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  gap: 15px;
+  grid-template-columns:repeat(1,1fr) repeat(1,3fr) ;
+  grid-template-rows: repeat(2,1fr) repeat(1,5fr) repeat(1,1fr);
+
+
 }
 
 .container div {
