--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,6 +5,9 @@
 
 .container {
   text-align: center;
+  display:grid;
+  grid-template-columns: 1fr 4fr;
+  gap:4px;
 }
 
 .container div {
@@ -17,15 +20,41 @@
 
 .header {
   background-color: #393f4d;
+  display:grid;
+  grid-template-columns: 1fr 2fr;
+  grid-column: 1 /-1;
+
+}
+
+.header .logo{
+  justify-self: start;
+}
+
+.menu{
+  align-self: center;
+}
+
+
+.menu ul {
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr ;
+
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style-type: none;
+ 
 }
 
 .sidebar {
   background-color: #C50208;
+  gap:50px;
+  display:grid;
+  grid-column: 1/2;
+  grid-row:2/4;
+
 }
 
 .sidebar .photo {
@@ -34,6 +63,16 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  align-items: center;
+}
+
+
+
+
+.side-content {
+  display: grid;
+  align-items: center;
 }
 
 
@@ -42,19 +81,36 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+
 }
 
 .nav {
   background-color: #C50208;
+  display:grid;
+
+  grid-column: 2/-1;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  list-style: none;
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+
 }
 
 .article {
   background-color: #bccbde;
+  display:grid;
+  grid-template-columns:repeat(4,minmax(250px,1fr)) ;
+  gap:15px;
+  display:grid;
+  grid-column: 2/-1;
+
 }
 
 .article p {
@@ -68,6 +124,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +140,8 @@
 
 .footer {
   background-color: #393f4d;
+  display:grid;
+  grid-column: 1/-1;
 }
 
 .footer p {
