--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -5,7 +5,11 @@ html {
 }
 
 .container {
+  display: grid;
   text-align: center;
+
+  grid-template: 100px 100px 500px 100px / 300px 900px;
+  gap: 15px;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
@@ -22,22 +26,28 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column: 1 / 3;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-column: 1 / 2;
+  grid-row: 2/ 4;
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 2 / 3;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-column: 2 / 3;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
 
 .article p {
@@ -45,4 +55,5 @@ html {
   font-family: sans-serif;
   color: white;
   text-align: left;
+  
 }
